Fix bug on background -mg for banner on mobile devices in style.css file

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ nav ul li a:hover {
 #banner {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)),
     url(images/banner-img.jpeg);
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -267,6 +267,10 @@ nav ul li a:hover {
 
 /* Start: Skils Media Query */
 @media screen and (min-width: 576px) {
+  #banner {
+    background-attachment: fixed;
+  }
+
   .skills-center {
     max-width: 90vw;
     margin: 0 auto;
